Revert "Tried to fix imark on mobile"
This reverts commit a174fd39feab412a4874e368b141f36da063ee31.

--- a/css/group.css
+++ b/css/group.css
@@ -39,9 +39,8 @@ section {
 }
 
 .imark {
-  margin-top:-100px;
-  clear:both;
-  display:block;
+	float:right;
+	margin-top:-100px;	
 }
 
 /* CSS for special font sizes */
@@ -117,14 +116,10 @@ section {
   font-family:'Roboto', sans-serif;
   margin-top:0px;
   margin-bottom:15px;
-  display:block;
-  clear:both;
 }
 
 .jumbotron p {
   color:#ecf0f1;
-  display:block;
-  clear:both;
 }
 
 .jumbotron .indent {
